remove embeddings_comparions

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ dataset/trailers/
 dataset/films/
 downloaden/gedownloade-trailers/
 literature/
-results/
+results/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
